<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.courtcounter.MainActivity">


    <LinearLayout
        android:background="@drawable/background_counterapp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/Finn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/teamNameMarginTop"
                android:layout_marginStart="@dimen/teamNameMarginStart"
                android:layout_marginEnd="@dimen/teamNameMarginEnd"
                android:layout_marginLeft="@dimen/teamNameMarginLeft"
                android:layout_marginRight="@dimen/teamNameMarginRight"
                android:fontFamily="@font/allerta_stencil"
                android:gravity="center_horizontal"
                android:text="@string/team_Finn"
                android:textColor="@color/teamName"
                android:textSize="@dimen/textSizeTeamName"/>


        <TextView
            android:id="@+id/team_Finn_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/paddingTeamScore"
            android:text="@string/finn_score"
            android:fontFamily="@font/allerta_stencil"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSizeScore"/>

        <Button
            android:id="@+id/threePointsFinn"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:onClick="addthreePointsFinn"
            android:text="@string/_3_points"
            style="@style/colorButton"
            android:layout_gravity="center"/>



        <Button
            android:id="@+id/twoPointsFinn"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:onClick="addtwoPointsFinn"
            android:text="@string/_2_points"
            style="@style/colorButton"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/onePointFinn"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:onClick="addonePointFinn"
            android:text="@string/free_throw"
            style="@style/colorButton"
            android:layout_gravity="center"/>


        </LinearLayout>

        <View
            style="@style/Divider"/>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <TextView
            android:id="@+id/Lotta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/teamNameMarginTop"
            android:layout_marginStart="@dimen/teamNameMarginStart"
            android:layout_marginEnd="@dimen/teamNameMarginEnd"
            android:layout_marginLeft="@dimen/teamNameMarginLeft"
            android:layout_marginRight="@dimen/teamNameMarginRight"
            android:text="@string/team_Lotta"
            android:fontFamily="@font/allerta_stencil"
            android:textSize="@dimen/textSizeTeamName"
            android:textColor="@color/teamName"/>

        <TextView
            android:id="@+id/team_Lotta_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/paddingTeamScore"
            android:text="@string/lotta_score"
            android:fontFamily="@font/allerta_stencil"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSizeScore"/>

        <Button
            android:id="@+id/threePointsLotta"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:onClick="addthreePointsLotta"
            android:text="@string/_3_points"
            style="@style/colorButton"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/twoPointsLotta"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:onClick="addtwoPointsLotta"
            android:text="@string/_2_points"
            style="@style/colorButton"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/onePointLotta"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:onClick="addonePointLotta"
            android:text="@string/free_throw"
            style="@style/colorButton"
            android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>


        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetScore"
            android:text="@string/reset_button"
            android:textColor="@color/textColorButtonReset"
            android:textAllCaps="true"
            android:textSize="@dimen/textSizeButtonReset"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/marginBottomButtonReset"
            android:background="@drawable/button"/>


</RelativeLayout>
</ScrollView>

